--- a/beanbag/index.html
+++ b/beanbag/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Beanbag Tepilaut.co!</title>
     <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico'/>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/tlc.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/tlc.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
