Beranda dan gambarnya

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to the Tepilaut.co!</title>
-    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico'/>
+    <title>Tepilaut.co!</title>
+    <link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico'/>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/tlc.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
@@ -13,14 +13,30 @@
     <section class="hero hero-image is-fullheight">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title is-1">
-            Something chill will come
-          </h1>
-          <h2 class="subtitle is-3">
-            Tide rising at tepilaut.co
-          </h2>
+          <div class="column is-6 is-offset-1">
+              <h1 class="title is-1">
+                  Tepilaut.co
+              </h1>
+              <h2 class="subtitle is-4">
+                  Akan segera datang. Kami akan berusaha menghadirkan nuansa pantai dalam kehidupan sehari-hari anda. Santai kita di pantai.
+              </h2>
+              <div class="box">
+                  <div class="field is-grouped">
+                      <p class="control is-expanded">
+                          <input class="input" type="text" placeholder="Enter your email">
+                      </p>
+                      <p class="control">
+                          <a class="button is-info">
+                              Notify Me
+                          </a>
+                      </p>
+                  </div>
+              </div>
+          </div>        
         </div>
       </div>
     </section>  
   </body>
 </html>
+
+
