--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   Tepilaut.co
               </h1>
               <h2 class="subtitle is-4">
-                  Akan segera datang. Kami akan berusaha menghadirkan nuansa pantai dalam kehidupan sehari-hari anda. Santai kita di pantai.
+                  Akan segera datang. Tunggu kami untuk menghadirkan nuansa indah-tenang-santai pantai dalam kehidupan sehari-hari anda. Daftarkan emailmu dan tunggu sesuatu dari kami.
               </h2>
               <div class="box">
                   <div class="field is-grouped">
