--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
               <h1 class="title is-1">
                   Tepilaut.co
               </h1>
-              <h2 class="subtitle is-4">
-                  Akan segera datang. Tunggu kami untuk menghadirkan nuansa indah-tenang-santai pantai dalam kehidupan sehari-hari anda. Daftarkan emailmu dan tunggu sesuatu dari kami.
+              <h2 class="subtitle">
+                  Akan segera datang. Tunggu kami untuk hadirkan indah-tenang-santai pantai dalam kehidupan sehari-harimu. Daftarkan email dan tunggu sesuatu dari kami.
               </h2>
               <div class="box">
                   <div class="field is-grouped">
